--- a/overlay/frameworks/base/core/res/res/values-mcc310-mnc004/config.xml
+++ b/overlay/frameworks/base/core/res/res/values-mcc310-mnc004/config.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
 /*
-** Copyright 2016, The Android Open Source Project
+** Copyright 2015, The Android Open Source Project
 **
 ** Licensed under the Apache License, Version 2.0 (the "License");
 ** you may not use this file except in compliance with the License.
@@ -38,9 +38,6 @@
     <string-array translatable="false" name="config_gpsParameters">
         <item>SUPL_HOST=supl.google.com</item>
         <item>SUPL_PORT=7275</item>
-        <item>XTRA_SERVER_1=http://xtrapath1.izatcloud.net/xtra3grc.bin</item>
-        <item>XTRA_SERVER_2=http://xtrapath2.izatcloud.net/xtra3grc.bin</item>
-        <item>XTRA_SERVER_3=http://xtrapath3.izatcloud.net/xtra3grc.bin</item>
         <item>NTP_SERVER=north-america.pool.ntp.org</item>
         <item>SUPL_VER=0x20000</item>
         <item>NMEA_PROVIDER=0</item>
@@ -49,8 +46,22 @@
         <item>INTERMEDIATE_POS=0</item>
         <item>LPP_PROFILE=3</item>
         <item>GPS_LOCK=3</item>
-        <item>SUPL_MODE=0</item>
+        <item>SUPL_MODE=1</item>
         <item>SUPL_ES=1</item>
     </string-array>
+
+    <!-- Entitlement APP provisioning for Tethering -->
+    <string-array translatable="false" name="config_mobile_hotspot_provision_app">
+        <item>com.lge.entitlement</item>
+        <item>com.lge.entitlement.EntitlementDialogActivity</item>
+    </string-array>
+    <string translatable="false" name="config_mobile_hotspot_provision_app_no_ui">com.lge.entitlement.SILENT_ENTITLEMENT_CHECK</string>
+    <string translatable="false" name="config_mobile_hotspot_provision_response">com.lge.entitlement.SILENT_ENTITLEMENT_CHECK_RESULT</string>
+
+    <!-- MMS user agent string -->
+    <string name="config_mms_user_agent" translatable="false">nexus5x</string>
+
+    <!-- MMS user agent prolfile url -->
+    <string name="config_mms_user_agent_profile_url" translatable="false">http://uaprof.vtext.com/lg/nexus5x/nexus5x.xml</string>
 
 </resources>
